--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,7 +13,6 @@ body {
   padding: 0;
   font-family: $font-family;
   font-weight: $font-regular;
-  font-size: $p-font-size;
   color: $p-font-color;
   width: $width;
   height: $height;
@@ -22,24 +21,14 @@ body {
   justify-content: center;
 }
 
-.hello {
-  margin-top: 20vh;
-  text-align: center;
-  color: $h1-font-color;
-  font-size: $h1-font-size;
-  font-weight: $font-bold;
-}
+.header__logo {
+  width: 100vw;
+  justify-content: center;
+  display: flex;
 
-.description {
-  margin-top: 2px;
-  color: $p-font-color;
-  text-align: center;
-}
-
-.image-insert {
-  margin: 20px auto;
-  opacity: 0.6;
-  display: block;
-  width: 400px;
-  height: 300px;
+  img {
+    margin-top: 4.39453125vw;
+    width: 5.859375vw;
+    height: 5.859375vw;
+  }
 }
