--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -19,3 +19,5 @@ $checkboxes-list__extra-uncheck-other-font: 11px;
 $label-font-color: #b8b8b8;
 $h1-font-color: #a0a0a0;
 $p-font-color: #b8b8b8;
+
+$filter__header-color: #4A4A4A;
