Add div container and positioning content

--- a/src/scss/_Filter.scss
+++ b/src/scss/_Filter.scss
@@ -7,7 +7,7 @@
   box-shadow: 0 1px 4px 0 rgba(91,137,164,0.25);
   border-radius: 5px;
   margin-left: 10.05859375vw;
-  margin-top: 5.6640625vw;
+  margin-right: 1.85546875vw;
 }
 
 .filter__header {
