--- a/src/scss/_Tickets.scss
+++ b/src/scss/_Tickets.scss
@@ -16,8 +16,18 @@
   margin-bottom: 1.953125vw;
 }
 
+.ticket__button {
+  width: 15.625vw;
+  height: 5.46875vw;
+  background: #FF6D00;
+  box-shadow: 0 1px 0 0 #D64D08, 0 2px 1px 0 rgba(0,0,0,0.10);
+  border-radius: 5px;
+}
+
 .buy-button__text, .buy-button__price {
   font-size: $ticket__price-font;
+  color: #FFF;
+  margin: 0;
 }
 
 .buy-button__text {
@@ -28,9 +38,16 @@
   font-weight: $font-regular;
 }
 
-
+.ticket__buy {
+  padding-top: 2.44140625vw;
+  padding-left: 1.953125vw;
+  padding-right: 1.953125vw;
+  //background: #ECEFF1;
+  border-right: 1px solid #ECEFF1;
+}
 
 .ticket__airline-logo {
+  margin-bottom: 1.953125vw;
   img {
     width: 11.71875vw;
     height: 3.41796875vw;
