Add control fluid font-size && correct maxFont and minFont && maxScreen resolution

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 
 html {
   box-sizing: border-box;
+  @include fluid-type(font-size, $minScreen, $maxScreen, $minFont, $maxFont);
 }
 *, *:before, *:after {
   box-sizing: inherit;
