Convert px to vw for line-height

--- a/src/scss/_Filter.scss
+++ b/src/scss/_Filter.scss
@@ -15,7 +15,7 @@
   color: $filter__header-color;
   font-weight: $font-semibold;
   opacity: 0.1;
-  line-height: 19px;
+  line-height: 1.85546875vw;
   letter-spacing: 0.5px;
   padding-top: 1.46484375vw;
   padding-left: 1.46484375vw;
