Convert line-height px to vw for buy-button__text

--- a/src/scss/_Tickets.scss
+++ b/src/scss/_Tickets.scss
@@ -33,7 +33,7 @@
 
 .buy-button__text {
   font-weight: $font-semibold;
-  line-height: 22px;
+  line-height: 2.1484375vw;
 }
 
 .buy-button__price {
