--- a/src/scss/_Filter.scss
+++ b/src/scss/_Filter.scss
@@ -4,8 +4,8 @@
   width: 22.65625vw;
   height: 22.55859375vw;
   background-color: #FFF;
-  box-shadow: 0 1px 4px 0 rgba(91,137,164,0.25);
-  border-radius: 5px;
+  box-shadow: 0 0.09765625vw 0.390625vw 0 rgba(91,137,164,0.25);
+  border-radius: $border-radius;
   margin-left: 10.05859375vw;
   margin-right: 1.85546875vw;
 }
@@ -16,21 +16,23 @@
   font-weight: $font-semibold;
   opacity: 0.1;
   line-height: 1.85546875vw;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.048828125vw;
   padding-top: 1.46484375vw;
   padding-left: 1.46484375vw;
 }
 
 .checkbox-item__checkbox {
+  display: flex;
+  align-items: center;
   padding-left: 1.46484375vw;
   padding-right: 1.46484375vw;
 
   .checkbox-item__checkbox-field {
     background-color: #FFF;
-    border: 1px solid #D2D5D6;
-    border-radius: 3px;
-    width: 19px;
-    height: 19px;
+    border: 0.09765625vw solid #D2D5D6;
+    border-radius: 0.29296875vw;
+    width: 1.85546875vw;
+    height: 1.85546875vw;
   }
 
   .checkbox-item__checkbox-field:checked {
