Add cursor(pointer) to ticket__checkbox-item and ticket__button

--- a/src/scss/_Filter.scss
+++ b/src/scss/_Filter.scss
@@ -24,6 +24,7 @@
 .filter__checkbox-item {
   padding-top: 0.5859375vw;
   padding-bottom: 0.48828125vw;
+  cursor: pointer;
 }
 
 .filter__checkbox-item:last-child {
