--- a/src/scss/_Tickets.scss
+++ b/src/scss/_Tickets.scss
@@ -24,6 +24,7 @@
   background: #FF6D00;
   box-shadow: 0 0.09765625vw 0 0 #D64D08, 0 0.1953125vw 0.09765625vw 0 rgba(0,0,0,0.10);
   border-radius: $border-radius;
+  cursor: pointer;
 }
 
 .buy-button__text, .buy-button__price {
