--- a/src/scss/_Filter.scss
+++ b/src/scss/_Filter.scss
@@ -87,11 +87,26 @@
   padding-left: 0.9765625vw;
 }
 
-.checkbox-item__show-only-button {
+.checkbox-item__show-only {
+  opacity: 0;
+}
+
+.checkbox-item__show-only:hover {
+  opacity: 1;
+  margin-right: 1.46484375vw;
   display: flex;
   justify-content: flex-end;
   font-weight: $font-regular;
   font-size: $checkboxes-list__extra-uncheck-other-font;
-  margin-right: 1.46484375vw;
-  color: #3E9CE8;
+}
+
+.checkbox-item__show-only-button {
+background: none;
+outline: none;
+cursor: pointer;
+border: none;
+color: #3E9CE8;
+height: 3.41796875vw;
+width: 4.8828125vw;
+padding: 0;
 }
